# rad-run-snowboarding

./: .gitignore  README.md
smart contracts/: Cargo.toml
smart contracts/src/: abi.rs  contract.rs  error.rs  interface.rs  lib.rs  query.rs  service.rs  state.rs
snowboarding game/: Assembly-CSharp.csproj  Snowboarder.sln
snowboarding game/Assets/: MainGame.unity  StartMenu.unity
snowboarding game/Assets/Prefabs/: coin.prefab
snowboarding game/Assets/Scripts/: BlinkText.cs  Coin.cs  CrashDetector.cs  DiscordAuth.cs  DiscordUser.cs  DiscordUsernameDisplay.cs  DiscordWebSocketClient.cs  DuatTrail.cs  FinishLine.cs  MainThreadDispatcher.cs  PlayerController.cs  ScoreManager.cs  StartMenu.cs  StartMenuDiscordUI.cs
snowboarding game/Assets/Settings/Build Profiles/: New Web Profile.asset
snowboarding game/Assets/Sprites/Materials/: cabin.mat
snowboarding game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
snowboarding game/RadRunWeb1/: index.html
snowboarding game/Temp/: workerlic
snowboarding game/Temp/__Backupscenes/: 0.backup
snowboarding game/UserSettings/: EditorUserSettings.asset
snowboarding game/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
