[package]
name = "rad_run_scores"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.14.0"
async-graphql = "7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
name = "rad_run_scores"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rad_run_scores_contract"
path = "src/contract.rs"

[[bin]]
name = "rad_run_scores_service"
path = "src/service.rs"
